[HYC - 2129] Truncate Pubmed Ingest Emails (#1188)
* generate result csvs

* truncate headers and rows, attach csvs

* syntax, footer for truncated tables

* retrieve uid

* test changes

* update mailer tests

--- a/app/views/pubmed_report_mailer/pubmed_report_email.html.erb
+++ b/app/views/pubmed_report_mailer/pubmed_report_email.html.erb
@@ -29,6 +29,14 @@
   <%= total_files || total_unique %>
 </p>
 
+<% if @report[:truncated_categories].any? %>
+  <p style="font-size: 16px; margin-bottom: 10px; background-color:#fff3cd; color:#856404; padding:8px; border:1px solid #ffeeba;">
+    Note: The following categories were truncated to the first <%= @report[:max_display_rows] %> records for email display:
+    <strong><%= @report[:truncated_categories].map(&:to_s).join(", ") %></strong>.
+    Please see the attached CSV files for full results.
+  </p>
+<% end %>
+
 <!-- Generate tables for each record category -->
 <% @report[:categories].each do |key, label| %>
 
@@ -59,7 +67,7 @@
       </tr>
     </thead>
     <tbody>
-      <% @report[:records][key].each_with_index do |record, index| %>
+      <% @report[:records][key].first(@report[:max_display_rows]).each_with_index do |record, index| %>
         <tr>
           <td style="border:2px solid #dddddd; padding:10px; background-color:<%= index.even? ? '#f9f9f9' : '#ffffff' %>;"><%= record[:file_name] %></td>
           <td style="border:2px solid #dddddd; padding:10px; background-color:<%= index.even? ? '#f9f9f9' : '#ffffff' %>;">
@@ -78,6 +86,14 @@
             <% else %>
               N/A
             <% end %>
+          </td>
+        </tr>
+      <% end %>
+      <% if @report[:records][key].size > @report[:max_display_rows] %>
+        <tr>
+          <td colspan="6" style="border:2px solid #dddddd; padding:10px; background-color:#ffeeba; font-weight:bold; color:#856404;">
+            Showing first <%= @report[:max_display_rows] %> of <%= @report[:records][key].size %> records.
+            Full list available in attached CSV.
           </td>
         </tr>
       <% end %>
