--- a/app/views/errors/not_found.html.erb
+++ b/app/views/errors/not_found.html.erb
@@ -1,2 +1,2 @@
 <h1 class="text-center">We can't find the page that you requested.</h1>
-<p class="text-center" style="margin-top: 25px">Try searching in the box above, or visit our <%= link_to "homepage", root_path %></p>
+<p class="text-center" style="margin-top: 25px">Try searching in the box above, or visit our <a href="/">homepage</a>.</p>
