--- a/app/views/catalog/facet.html.erb
+++ b/app/views/catalog/facet.html.erb
@@ -2,18 +2,23 @@
 <%# Blacklight 7.24.0 %>
 <%# Override app/views/catalog/facet.html.erb %>
 
-<%= render Blacklight::System::ModalComponent.new do |component| %>
-  <%# Prevent rendering if no index range or not an index facet %>
-  <% unless @facet&.index_range && @display_facet&.index? %>
-    <% return %>
-  <% end %>
+<% if @facet&.index_range && @display_facet&.index? %>
+  <%= render Blacklight::System::ModalComponent.new do |component| %>
+    <%# Removed component prefix that duplicates the facet pagination view %>
 
-  <% component.title { facet_field_label(@facet.key) } %>
+    <% component.title { facet_field_label(@facet.key) } %>
 
-  <%= render partial: 'facet_index_navigation' %>
+    <%= render partial: 'facet_index_navigation' if @facet&.index_range && @display_facet.index? %>
 
-  <% if @display_facet.present? %>
     <div class="facet-extended-list">
       <%= render_facet_limit(@display_facet, layout: false) %>
     </div>
+
+    <%# Removed component footer and placed the facet pagination partial within a `container` div %>
+    <div class="container">
+      <div class="facet-pagination bottom row justify-content-between">
+        <%= render :partial=>'facet_pagination' %>
+      </div>
+    </div>
   <% end %>
+<% end %>
