add link to override file

--- a/app/views/catalog/facet.html.erb
+++ b/app/views/catalog/facet.html.erb
@@ -1,4 +1,5 @@
 <%# [hyc-override] Guard clause to prevent rendering malformed facets %>
+<%# [hyc-override] https://github.com/UNC-Libraries/hyrax/blob/unc-hyrax-4-development/app/views/catalog/facet.html.erb %>
 <%# Blacklight 7.24.0 %>
 <%# Override app/views/catalog/facet.html.erb %>
 
