--- a/app/views/rosap_report_mailer/report_email.html.erb
+++ b/app/views/rosap_report_mailer/report_email.html.erb
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
 </head>
 <body>
-<p style="font-size: 16px; margin-bottom: 10px;">Reporting publications from ROSAP Ingest on <strong><%= @report[:formatted_time] %></strong></p>
+<p style="font-size: 16px; margin-bottom: 10px;">Reporting publications from ROSA=P Ingest on <strong><%= @report[:formatted_time] %></strong></p>
 
 <p style="font-size: 16px; margin-bottom: 10px;">
   <strong>Depositor: </strong><%= @report[:headers][:depositor] %>
